--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,139 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".DashboardActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".DashboardActivity">
 
-    <ScrollView android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <View
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:background="@drawable/gradient_title"
-                    android:orientation="vertical"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@drawable/gradient_title"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                    android:layout_width="66dp"
-                    android:layout_height="66dp"
-                    android:src="@drawable/oval"
-                    app:layout_constraintTop_toTopOf="@id/image_profilePicture"
-                    app:layout_constraintLeft_toLeftOf="@id/image_profilePicture"
-                    app:layout_constraintRight_toRightOf="@id/image_profilePicture"
-                    app:layout_constraintBottom_toBottomOf="@id/image_profilePicture"/>
+                android:layout_width="66dp"
+                android:layout_height="66dp"
+                android:src="@drawable/oval"
+                app:layout_constraintBottom_toBottomOf="@id/image_profilePicture"
+                app:layout_constraintLeft_toLeftOf="@id/image_profilePicture"
+                app:layout_constraintRight_toRightOf="@id/image_profilePicture"
+                app:layout_constraintTop_toTopOf="@id/image_profilePicture" />
 
             <ImageView
-                    android:id="@+id/image_profilePicture"
-                    android:layout_width="62dp"
-                    android:layout_height="62dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                android:id="@+id/image_profilePicture"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <TextView
-                    android:id="@+id/text_Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:fontFamily="@font/noto_sans_bold"
-                    android:text="Name"
-                    android:textColor="@color/white"
-                    android:textSize="22sp"
-                    app:layout_constraintBottom_toTopOf="@id/text_ScreenName"
-                    app:layout_constraintLeft_toRightOf="@id/image_profilePicture"
-                    app:layout_constraintVertical_chainStyle="packed"
-                    app:layout_constraintTop_toTopOf="@id/image_profilePicture"
-                    tools:ignore="HardcodedText"/>
+                android:id="@+id/text_Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/noto_sans_bold"
+                android:text="Name"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                app:layout_constraintBottom_toTopOf="@id/text_ScreenName"
+                app:layout_constraintLeft_toRightOf="@id/image_profilePicture"
+                app:layout_constraintTop_toTopOf="@id/image_profilePicture"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:ignore="HardcodedText" />
 
             <TextView
-                    android:id="@+id/text_ScreenName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/text_Name"
-                    android:fontFamily="@font/noto_sans_light"
-                    android:text="ScreenName"
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:textStyle="italic"
-                    app:layout_constraintBottom_toBottomOf="@id/image_profilePicture"
-                    app:layout_constraintLeft_toLeftOf="@id/text_Name"
-                    app:layout_constraintTop_toBottomOf="@id/text_Name"
-                    tools:ignore="HardcodedText"/>
+                android:id="@+id/text_ScreenName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_Name"
+                android:fontFamily="@font/noto_sans_light"
+                android:text="ScreenName"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="@id/image_profilePicture"
+                app:layout_constraintLeft_toLeftOf="@id/text_Name"
+                app:layout_constraintTop_toBottomOf="@id/text_Name"
+                tools:ignore="HardcodedText" />
 
             <RelativeLayout
-                    android:id="@+id/_header"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent">
+                android:id="@+id/_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent">
 
 
             </RelativeLayout>
 
 
             <GridLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:alignmentMode="alignMargins"
-                    android:columnCount="1"
-                    android:columnOrderPreserved="false"
-                    android:rowCount="3"
-                    app:layout_constraintTop_toBottomOf="@id/image_profilePicture">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:alignmentMode="alignMargins"
+                android:columnCount="1"
+                android:columnOrderPreserved="false"
+                android:rowCount="3"
+                app:layout_constraintTop_toBottomOf="@id/image_profilePicture">
 
 
                 <com.sasarinomari.tweetcleaner.DashboardCard
-                        android:id="@+id/button_erase"
-                        android:layout_width="0dp"
-                        android:layout_height="128dp"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        app:icon="@drawable/delete_empty"
-                        app:ovalColor="#00CF91"
-                        app:description="@string/TweetCleanerDescription"
-                        app:text="@string/TweetCleaner"/>
+                    android:id="@+id/button_erase"
+                    android:layout_width="0dp"
+                    android:layout_height="128dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:description="@string/TweetCleanerDescription"
+                    app:icon="@drawable/comment_remove"
+                    app:ovalColor="#00CF91"
+                    app:text="@string/TweetCleaner" />
 
                 <com.sasarinomari.tweetcleaner.DashboardCard
-                        android:layout_width="0dp"
-                        android:id="@+id/button_tweetReport"
-                        android:layout_height="128dp"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        app:description="@string/TweetReportDescription"
-                        app:ovalColor="#888888"
-                        app:text="@string/TweetReport"/>
+                    android:id="@+id/button_tweetReport"
+                    android:layout_width="0dp"
+                    android:layout_height="128dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:description="@string/TweetReportDescription"
+                    app:icon="@drawable/chart_areaspline"
+                    app:ovalColor="#888888"
+                    app:text="@string/TweetReport" />
 
                 <com.sasarinomari.tweetcleaner.DashboardCard
-                        android:layout_width="0dp"
-                        android:id="@+id/button_followerManagement"
-                        android:layout_height="128dp"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        app:icon="@drawable/account_arrow_left"
-                        app:description="@string/FollowerManagementDescription"
-                        app:ovalColor="#FFD600"
-                        app:text="@string/FollowerManagement"/>
+                    android:id="@+id/button_followerManagement"
+                    android:layout_width="0dp"
+                    android:layout_height="128dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:description="@string/FollowerManagementDescription"
+                    app:icon="@drawable/account_multiple_remove"
+                    app:ovalColor="#FFD600"
+                    app:text="@string/FollowerManagement" />
 
                 <com.sasarinomari.tweetcleaner.DashboardCard
-                        android:layout_width="0dp"
-                        android:layout_height="128dp"
-                        android:id="@+id/button_removeFriends"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        app:ovalColor="#FF0000"
-                        app:icon="@null"
-                        app:description="모든 팔로잉 및 팔로워를 블언블합니다."
-                        app:text="외톨이"/>
+                    android:id="@+id/button_removeFriends"
+                    android:layout_width="0dp"
+                    android:layout_height="128dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:description="@string/ChainblockDescription"
+                    app:icon="@drawable/link_variant_remove"
+                    app:ovalColor="#FF0000"
+                    app:text="@string/Chainblock" />
             </GridLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -141,9 +143,8 @@
     </ScrollView>
 
     <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/layout_ad"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-    </LinearLayout>
+        android:id="@+id/layout_ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"></LinearLayout>
 </LinearLayout>
