--- a/app/src/main/res/layout/activity_tweet_report.xml
+++ b/app/src/main/res/layout/activity_tweet_report.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorPrimaryDark"
+    android:orientation="vertical"
     tools:context=".tweetreport.TweetReportActivity">
 
     <LinearLayout
@@ -38,10 +38,10 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/button_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:id="@+id/button_update"
         app:cardCornerRadius="12dp"
         app:cardElevation="6dp">
 
@@ -76,11 +76,12 @@
                     app:layout_constraintRight_toRightOf="@id/oval"
                     app:layout_constraintTop_toTopOf="@id/oval" />
             </RelativeLayout>
+
             <TextView
                 android:id="@+id/_label1"
                 android:layout_width="wrap_content"
-                android:layout_marginStart="16dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:fontFamily="@font/noto_sans_regular"
                 android:text="일지 갱신하기"
                 android:textColor="@color/black"
@@ -95,4 +96,10 @@
 
     </androidx.cardview.widget.CardView>
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:divider="@null"
+        android:layout_weight="1" />
 </LinearLayout>
