--- a/app/src/main/res/layout/activity_chain_block.xml
+++ b/app/src/main/res/layout/activity_chain_block.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/_input1"
@@ -58,15 +58,16 @@
             app:layout_constraintBottom_toTopOf="@id/button_next"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:hintTextAppearance="@style/WhitecolorText"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input_ScreenName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:hint="@string/ScreenNameHint"
-                android:inputType="text"
-                android:textColor="@color/white" />
+                android:inputType="text"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -86,6 +87,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
+        android:visibility="gone"
         android:id="@+id/layout_second"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
