--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorBackground">@color/colorPrimaryDark</item>
     </style>
+
+    <style name="WhitecolorText" parent="TextAppearance.AppCompat" >
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
