--- a/app/src/main/res/layout/activity_chain_block.xml
+++ b/app/src/main/res/layout/activity_chain_block.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/_input1"
@@ -87,7 +87,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
-        android:visibility="gone"
         android:id="@+id/layout_second"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -162,11 +161,19 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
+                            android:id="@+id/layout_following"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center"
                             android:orientation="vertical">
+
+                            <CheckBox
+                                android:checked="true"
+                                android:buttonTint="@color/red"
+                                android:id="@+id/checkbox_following"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -189,11 +196,19 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/layout_followers"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center"
                             android:orientation="vertical">
+
+                            <CheckBox
+                                android:checked="true"
+                                android:buttonTint="@color/red"
+                                android:id="@+id/checkbox_followers"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
