--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,11 +10,11 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:paddingBottom="50dp"
             android:layout_height="wrap_content">
 
             <View
@@ -159,7 +159,8 @@
 
     <LinearLayout
         android:id="@+id/layout_ad"
-        android:layout_width="match_parent"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"/>
-</LinearLayout>
+</FrameLayout>
